Actualizacion de la tabla

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </tr>
                 <tr>
                     <td><label>Otros</label></td>
-                    <td><input type="text" placeholder="Recomendaciones para que el aplicativo funcione mejor."></td>
+                    <td><input type="text" placeholder="Recomendaciones para que el aplicativo funcione.    "></td>
                 </tr>
                 <tr>
                     <td colspan="2"></td>
@@ -141,15 +141,18 @@
                     <th><label>Validó</label></th>
                 </tr>
                 <td>
-                    <textarea name="" id="" cols="16" rows="8" placeholder="Firma"></textarea>
+                    <textarea name="" id="" cols="20" rows="8" placeholder="Firma"></textarea>
                 </td>
                 <td>
-                    <textarea name="" id="" cols="16" rows="8" placeholder="Firma"></textarea>
+                    <textarea name="" id="" cols="20" rows="8" placeholder="Firma"></textarea>
                 </td>
                 <td>
-                    <textarea name="" id="" cols="16" rows="8" placeholder="Firma"></textarea>
+                    <textarea name="" id="" cols="20" rows="8" placeholder="Firma"></textarea>
                 </td>
             </table>
+        </div>
+        <div class="btn-container">
+        <button class="btn-env">Enviar</button>
         </div>
     </div>
     </div>
